--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -218,6 +218,7 @@ cm.cluster.command.failed=Cloudera Manager command [{0}] failed, you can check t
 cm.cluster.command.timeout=Cloudera Manager command [{0}] timed out, you can check the command here: {1}
 cm.cluster.services.started=Cloudera Manager services have been started.
 cm.cluster.services.starting=Starting Cloudera Manager services.
+cm.cluster.services.restarting=Restarting Cloudera Manager services.
 cm.cluster.services.stopping=Stopping Cloudera Manager services.
 cm.cluster.services.stopped=Cloudera Manager services have been stopped.
 cm.cluster.updating.remote.data.context=Cloudera Manager updating remote data context, started.
