CB-15392: Refreshing data mart DH with ephemeral volumes does not work.

--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -459,6 +459,9 @@ environment.stop.failed=Environment failed to stop
 
 environment.start.datahub.started=Datahub started for Environment
 environment.start.datahub.failed=Datahub start failed for Environment
+environment.restart.datahub.started=Datahubs restart started for Environment
+environment.restart.datahub.failed=Datahubs restart failed for Environment
+environment.restart.datahub.finished=Datahubs restart finished for Environment
 environment.start.datalake.started=Datalake started for Environment
 environment.start.datalake.failed=Datalake start failed for Environment
 environment.start.freeipa.started=Freeipa started for Environment
@@ -523,6 +526,9 @@ datalake.recovery.failed=Datalake recovery failed.
 datalake.recovery.bringup.failed=Datalake stack recovery failed.
 datalake.recovery.bringup.finished=Datalake stack successfully recovered, creating datalake cluster.
 datalake.recovery.teardown.finished=Datalake stack tear-down for recovery completed successfully.
+
+datalake.datahub.refresh.in.progress=Datahub refresh in progress
+datalake.datahub.refresh.failed=Datahub refresh failed. Reason: {0}
 
 environment.stack.config.updates.started=Environment configuration update of clusters started.
 environment.stack.config.updates.finished=Environment configuration update of clusters finished.
