CB-16815 Add calling of Upgrade CCM endpoint of FreeIPA in environment's flow
Upgrade CCM can be initiated from AVAILABLE and UPGRADE_CCM_FAILED statuses.
A poller is waiting for FreeIPA operation to finish.
Entitlement check is also added.
Two new statuses are added for the Environment, related to the tunnel type update step.

--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -486,6 +486,8 @@ environment.upgrade.ccm.validation.started=Validation for CCM upgrade started
 environment.upgrade.ccm.validation.failed=Validation for CCM upgrade failed
 environment.upgrade.ccm.freeipa.started=Upgrading CCM on FreeIPA started
 environment.upgrade.ccm.freeipa.failed=Upgrading CCM on FreeIPA failed
+environment.upgrade.ccm.tunnelupdate.started=Updating tunnel type started
+environment.upgrade.ccm.tunnelupdate.failed=Updating tunnel type failed
 environment.upgrade.ccm.datalake.started=Upgrading CCM on Data Lake started
 environment.upgrade.ccm.datalake.failed=Upgrading CCM on Data Lake failed
 environment.upgrade.ccm.datahub.started=Upgrading CCM on Data Hub clusters started
