CB-16982 Add necessary missing flow steps for CCM upgrade
Rename states and events to reflect other services' naming, that is,
rename CCM_UPGRADE to UPGRADE_CCM

--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -201,14 +201,15 @@ cluster.externaldatabase.stop.commenced=External database stop commenced.
 cluster.externaldatabase.stop.failed=External database stop failed.
 cluster.externaldatabase.stop.finished=External database stop finished.
 
-
-cluster.ccm.upgrade.preparation=CCM upgrade preparation started.
-cluster.ccm.upgrade.reregister=CCM upgrade re-register hosts.
-cluster.ccm.upgrade.remove.autossh=CCM upgrade autossh remove.
-cluster.ccm.upgrade.unregister.hosts=CCM upgrade unregister hosts.
-cluster.ccm.upgrade.preparation.failed=CCM upgrade preparation failed.
-cluster.ccm.upgrade.failed=CCM upgrade failed.
-cluster.ccm.upgrade.finished=CCM upgrade finished.
+cluster.ccm.upgrade.tunnel.update=Cluster Connectivity Manager tunnel type update.
+cluster.ccm.upgrade.push.salt.states=Cluster Connectivity Manager upgrade pushing Salt states.
+cluster.ccm.upgrade.reconfigure.nginx=Cluster Connectivity Manager upgrade reconfiguring NGINX.
+cluster.ccm.upgrade.register.clusterproxy=Cluster Connectivity Manager upgrade re-register hosts.
+cluster.ccm.upgrade.health.check=Cluster Connectivity Manager health check.
+cluster.ccm.upgrade.remove.agent=Cluster Connectivity Manager remove previous version's agent.
+cluster.ccm.upgrade.deregister.agent=Cluster Connectivity Manager unregister previous version's agent.
+cluster.ccm.upgrade.failed=Cluster Connectivity Manager upgrade failed.
+cluster.ccm.upgrade.finished=Cluster Connectivity Manager upgrade finished.
 
 cluster.kerberosconfig.validation.failed=Kerberos config validation failed with: {0}
 
