CB-17216 Integrate consumption into environment (create & terminate)
* Add cloud-consumption-api as new compile dependency for environment
  service.
* Integrate consumption schedule / unschedule invocations into
  environment create & terminate flows.
* Add new environment states and related notification messages.
* Some code cleanup.
* Testing:
  * Manual testing in local CB.
  * Added new UT and updated existing ones.

--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -427,6 +427,8 @@ environment.initialization.failed=Environment initialization failed
 environment.validation.started=Environment creation request validation started
 environment.validation.failed=Environment creation request validation failed
 environment.validation.skipped=Environment creation request validation skipped. Reason: {0}.
+environment.storage.consumption.collection.scheduling.started=Storage consumption collection scheduling started for environment
+environment.storage.consumption.collection.scheduling.failed=Storage consumption collection scheduling failed for environment
 environment.network.creation.started=Network creation/registration started for environment
 environment.network.creation.failed=Network creation/registration failed for environment
 environment.publickey.creation.started=Public Key creation/registration started for environment
@@ -443,6 +445,7 @@ environment.publickey.deletion.started=Public Key deletion/deregistration starte
 environment.clusterdefinition.deletion.started=Cluster definition deletion started
 environment.database.deletion.started=Database deletion/deregistration started
 environment.freeipa.deletion.started=FreeIPA deletion/deregistration started
+environment.storage.consumption.collection.unscheduling.started=Storage consumption collection unscheduling started
 environment.xp.deletion.started=Experience deletion started
 environment.idbroker.mappings.deletion.started=IDBroker mappings deletion/deregistration started
 environment.s3guard.table.deletion.started=S3Guard table deletion/deregistration started
