CB-14591 Datalake Upgrade CCM content
Use the StackV4 Endpoint's upgrade CCM method which is now changed to accept
resorce CRN instead of stack name.

Ignore Prevalidation on Cert is a misleading name, in basically turns on
SUPPRESS_HTTP_COMPLIANCE_VALIDATION for Jersey which is needed for HTTP PUT verb
without payload.

Tweaked poller timeout parameters because migration should not take hours but a few minutes.

--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -292,8 +292,7 @@ stack.sync.instance.failed=Updated metadata of instance {0} to failed, because u
 datalake.upgrade=Upgrade process initiated, target image id is {0}.
 datalake.upgrade.could.not.start=Upgrade process could not be started due to the following reason: {0}
 datalake.ccm.upgrade=Cluster Connectivity Manager upgrade initiated.
-datalake.ccm.upgrade.error.environment.notlatest=Invalid state: environment {} is not upgraded to the latest Cluster Connectivity Manager yet.
-datalake.ccm.upgrade.error.environment.notavailable=Invalid state: environment {} is not Available.
+datalake.ccm.upgrade.error.environment.notlatest=Invalid state: environment {0} is not upgraded to the latest Cluster Connectivity Manager yet.
 datalake.ccm.upgrade.error.invalid.count=More than one Data Lake is found for environment {0}. This case is not handled yet.
 datalake.ccm.upgrade.no.datalake=Environment {0} has no Data Lake present.
 datalake.ccm.upgrade.already.upgraded=Data Lake is already at the latest Cluster Connectivity Manager version.
