--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -329,6 +329,9 @@ cluster.pillar.config.update.started=Update of cluster configuration started.
 cluster.pillar.config.update.finished=Cluster configuration successfully updated.
 cluster.pillar.config.update.failed=Failed to update cluster configuration,
 
+cluster.salt.passwordrotate.finished=Salt password successfully rotated
+cluster.salt.passwordrotate.failed=Salt password rotation failed with error: {0}
+
 resource.blueprint.created=Blueprint created.
 resource.blueprint.deleted=Blueprint deleted.
 resource.sdx.created=Datalake cluster created.
@@ -471,6 +474,8 @@ environment.start.syncusers.started=Synchronize users started for Environment
 environment.start.syncusers.failed=Synchronize users failed for Environment
 
 environment.sync.finished=Environment sync is finished and new status is found, the new status is {0}
+environment.salt.passwordrotate.finished=Environment salt password rotation finished
+environment.salt.passwordrotate.failed=Environment salt password rotation failed. {0}
 
 environment.start.success=Environment successfully started
 environment.start.failed=Environment failed to start
