CB-17162: Show warning message when we are unable to read details of the Azure Marketplace image.
At the beginning of the cluster provision, we're validating that the Terms and Conditions are accepted for the Azure Marketplace image.
To perform this validation we need the Microsoft.MarketplaceOrdering/offertypes/publishers/offers/plans/agreements/read permission.
Sometimes the customers are not providing this permission. After this change, we're sending an error message to the customer to make sure that the Terms and Conditions are accepted.

--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -214,6 +214,7 @@ cluster.ccm.upgrade.finished=Cluster Connectivity Manager upgrade finished.
 cluster.kerberosconfig.validation.failed=Kerberos config validation failed with: {0}
 
 cluster.cloudconfig.validation.failed=Cloud config validation failed with the following errors: {0}
+cluster.provider.validation.warning=Cloud platform validation succeeded with the following warnings: {0}
 
 cm.cluster.command.failed=Cloudera Manager command [{0}] failed, you can check the command here: {1}
 cm.cluster.command.timeout=Cloudera Manager command [{0}] timed out, you can check the command here: {1}
