CB-14595 Upgrade CCM Datahub handler
Upgrade CCM for all Data Hubs are launched one after the other, and the results
are polled back. If any of this is failing then the whole Environment Upgrade
CCM flow is set to failed however the poller will wait for all upgrade datahub
flows to finish (or fail).

Extend StackCcmUpgradeV4Response and DistroXCcmUpgradeC1Response to
have a status flag and an error reason as well.
Added logic to handle cases when environment is not in proper state or
the data hub is already upgraded or was not launched with a CCM tunnel type.

--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -302,6 +302,11 @@ datalake.ccm.upgrade.not.available=Data Lake is not in Available state for upgra
 datalake.ccm.upgrade.failed=Data Lake upgrade to the latest Cluster Connectivity Manager version failed.
 datalake.ccm.upgrade.inprogress=Data Lake upgrade to the latest Cluster Connectivity Manager is in progress.
 
+datahub.ccm.upgrade.error.environment.notlatest=Invalid state: environment {0} is not upgraded to the latest Cluster Connectivity Manager yet.
+datahub.ccm.upgrade.not.available=Data Hub is not in Available state for upgrade.
+datahub.ccm.upgrade.already.upgraded=Data Hub is already at the latest Cluster Connectivity Manager version.
+datahub.ccm.upgrade.not.upgradeable=Data Lake is not upgradeable.
+
 cluster.manager.upgrade=Upgrading Cluster Manager.
 cluster.manager.upgrade.not.needed=Upgrading Cluster Manager is not needed as its buildnumber is the same: {0}.
 cluster.manager.upgrade.failed=Failed to upgrade Cluster Manager. Reason: {0}.
