--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -367,6 +367,8 @@ resource.sdx.stop.failed=Datalake stop failed.
 resource.sdx.detach.started=Datalake detach started. Original datalake renamed to {0}.
 resource.sdx.detach.finished=Datalake detach finished.
 resource.sdx.detach.deletion.failed=Deletion of detached datalake {0} failed. Please retry the failed step via the UI.
+resource.sdx.update_lb_dns.finished=Update of load balancer DNS for datalake finished.
+resource.sdx.update_lb_dns.failed=Update of load balancer DNS for datalake failed. Reason: {0}.
 resource.sdx.validation.skipped=Datalake object storage validation skipped. Reason: {0}.
 resource.sdx.change.image.started=Datalake change image flow started.
 resource.sdx.datalake.upgrade.started=Datalake upgrade flow started.
