CB-17547 Track datalake salt password rotation progress in a flow

--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -334,9 +334,9 @@ cluster.pillar.config.update.started=Update of cluster configuration started.
 cluster.pillar.config.update.finished=Cluster configuration successfully updated.
 cluster.pillar.config.update.failed=Failed to update cluster configuration,
 
-cluster.salt.passwordrotate.started=Salt password rotation started
-cluster.salt.passwordrotate.finished=Salt password successfully rotated
-cluster.salt.passwordrotate.failed=Salt password rotation failed with error: {0}
+cluster.salt.passwordrotate.started=SaltStack user password rotation started
+cluster.salt.passwordrotate.finished=SaltStack user password successfully rotated
+cluster.salt.passwordrotate.failed=SaltStack user password rotation failed with error: {0}
 
 resource.blueprint.created=Blueprint created.
 resource.blueprint.deleted=Blueprint deleted.
@@ -485,8 +485,8 @@ environment.start.syncusers.started=Synchronize users started for Environment
 environment.start.syncusers.failed=Synchronize users failed for Environment
 
 environment.sync.finished=Environment sync is finished and new status is found, the new status is {0}
-environment.salt.passwordrotate.finished=Environment salt password rotation finished
-environment.salt.passwordrotate.failed=Environment salt password rotation failed. {0}
+environment.salt.passwordrotate.finished=Environment SaltStack user password rotation finished
+environment.salt.passwordrotate.failed=Environment SaltStack user password rotation failed. {0}
 
 environment.start.success=Environment successfully started
 environment.start.failed=Environment failed to start
@@ -549,6 +549,9 @@ datalake.resize.triggered=Datalake resize initiated.
 
 datalake.datahub.refresh.in.progress=Datahub refresh in progress
 datalake.datahub.refresh.failed=Datahub refresh failed. Reason: {0}
+
+datalake.salt.passwordrotation.in.progress=Datalake SaltStack user password rotation in progress
+datalake.salt.passwordrotation.failed=Datalake SaltStack user password rotation failed. Reason: {0}
 
 environment.stack.config.updates.started=Environment configuration update of clusters started.
 environment.stack.config.updates.finished=Environment configuration update of clusters finished.
