CB-17571 - Implement core RDS upgrade flow skeleton required on Azure
This commit:
 - implements the wire of the core RDS upgrade flow
 - implements the business logic of the `backupRds` and `restoreRds` actual flow steps
 - implements stackV4 and distroX upgradeRds endpoints

What is yet to come
 - business logic of the `stop` and `start` and `upgradeRds` actual flow steps

--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -202,6 +202,16 @@ cluster.externaldatabase.stop.commenced=External database stop commenced.
 cluster.externaldatabase.stop.failed=External database stop failed.
 cluster.externaldatabase.stop.finished=External database stop finished.
 
+cluster.externaldatabase.upgrade.stop.services=Stopping Runtime Services and Cloudera Manager.
+cluster.externaldatabase.upgrade.backup.data=Creating data backup, it might take a while.
+cluster.externaldatabase.upgrade.dbserver=Upgrading database server.
+cluster.externaldatabase.upgrade.restore.data=Restoring data from the backup, it might take a while.
+cluster.externaldatabase.upgrade.start.services=Starting back Cloudera Manager and Runtime Services.
+cluster.externaldatabase.upgrade.finished=Upgrading database server finished.
+cluster.externaldatabase.upgrade.failed=Upgrading database server failed.
+cluster.externaldatabase.upgrade.already.upgraded=Upgrading database server is not needed as it is already on the latest version ({0}).
+cluster.externaldatabase.upgrade.not.available=Upgrading database server is not possible as stack is not available.
+
 cluster.ccm.upgrade.tunnel.update=Cluster Connectivity Manager tunnel type update.
 cluster.ccm.upgrade.push.salt.states=Cluster Connectivity Manager upgrade pushing Salt states.
 cluster.ccm.upgrade.reconfigure.nginx=Cluster Connectivity Manager upgrade reconfiguring NGINX.
