--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -218,6 +218,7 @@ cluster.provider.validation.warning=Cloud platform validation succeeded with the
 
 cm.cluster.command.failed=Cloudera Manager command [{0}] failed, you can check the command here: {1}
 cm.cluster.command.timeout=Cloudera Manager command [{0}] timed out, you can check the command here: {1}
+cm.cluster.command.timeout.warning=Cloudera Manager command [{0}] takes unusually long time, you can check the command here: {1}
 cm.cluster.services.started=Cloudera Manager services have been started.
 cm.cluster.services.starting=Starting Cloudera Manager services.
 cm.cluster.services.restarting=Restarting Cloudera Manager services.
