CB-13537: Create upgrade preparation flow
In order to reduce the chance of upgrade failures, we're introducing a preparation phase for runtime upgrades. During this phase, we're running all validation and downloading the required parcels for the machines.
The main benefits are the following:
- Not requires downtime
- Reducing the time of the real upgrade process
- If this flow fails for any reason, does not affect the cluster

This commit contains the following changes:
- New endpoint for calling the upgrade preparation
- A separate flow for downloading and distributing parcel

--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -317,6 +317,9 @@ cluster.upgrade.not.needed=Upgrading Cluster Runtime is not needed as its buildn
 cluster.upgrade.failed=Failed to upgrade Cluster Runtime. Reason: {0}.
 cluster.upgrade.finished.newversion=Cluster Runtime upgrade was successful. New version is {0}.
 cluster.upgrade.finished.noversion=Cluster upgrade was successful.
+cluster.upgrade.preparation.started=Cluster upgrade preparation started based on image: {0}.
+cluster.upgrade.preparation.finished=Cluster upgrade preparation finished.
+cluster.upgrade.preparation.failed=Cluster upgrade preparation failed: {0}
 cluster.upgrade.download.parcel=Downloading the new parcel
 cluster.upgrade.distribute.parcel=Distributing the new parcel
 cluster.upgrade.activate.parcel=Activating the new parcel
