CB-17622 Remove ZOMBIE nodes automatically after upscale
- New property: cb.upscale.zombie.auto.cleanup.enabled (default value: true)
- Add cluster and stack downscale flow trigger events for zombie nodes at the end of the upscale flow chain
- Use Payload class instead of stackId in FlowTriggerCondition implementations
- Save variables (contextParams) parameters into last and first FlowLog entry as well (in a flowchain). This is necessary to properly restart flow (flowchain) after POD restart.
- Create special trigger condition result in order to silently skip flow execution when its not needed. (no zombie nodes exists)
- Clean up flowchain when trigger condition fails/skips flow execution
- Improve downscale flows to handle Zombie node cleanup properly

--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -139,6 +139,7 @@ cluster.scaling.up=Scaling up host group: {0}
 cluster.re.register.with.cluster.proxy=Re-registering with Cluster Proxy service
 cluster.scaled.up=Scaled up host group: {0}
 cluster.scaling.down=Scaling down host group: {0}
+cluster.scaling.down.zombie.nodes=Scaling down Zombie nodes from host group: {0}
 cluster.scaled.down=Scaled down host group: {0}
 cluster.scaled.down.none=0 instance has been scaled down
 cluster.run.containers=Starting cluster containers
@@ -243,6 +244,7 @@ ambari.cluster.restarting.ambari.agent=Restarting Cloudera Manager agents
 ambari.cluster.ambari.server.restarted=Cloudera Manager server restarted
 ambari.cluster.ambari.agent.restarted=Cloudera Manager agents restarted
 cluster.removing.nodes=Removing {0} node(s)
+cluster.removing.zombie.nodes=Removing {0} Zombie node(s)
 cluster.force.removing.nodes=Removing forcefully {0} node(s)
 cluster.removing.node.lost.node.decommission.aborted=Decommission commands for lost nodes {0} were stucked in Cloudera Manager twice, thus were aborted, removing those nodes forcefully.
 ambari.cluster.adding.node.to.hostgroup=Adding {0} new host(s) to the host group {1}
