CB-17692 Implement upgrade preparation flow in datalake service
- new internal endpoint introduced in core for datalake service to invoke the preparation flow
- renamed some core method and class related to prepare which contained `Distrox` but used for DL too
- simple DL flow for invoking, setting status and polling
- new DL prepare endpoint using the same request as upgrade

--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -294,6 +294,7 @@ stack.sync.instance.updated=Updated metadata of instance {0} to {1} as the cloud
 stack.sync.instance.failed=Updated metadata of instance {0} to failed, because update was in progress, but instance isn''t member of the cluster.
 
 datalake.upgrade=Upgrade process initiated, target image id is {0}.
+datalake.upgrade.preparation=Upgrade preparation process initiated, target image id is {0}.
 datalake.upgrade.could.not.start=Upgrade process could not be started due to the following reason: {0}
 datalake.ccm.upgrade=Cluster Connectivity Manager upgrade initiated.
 datalake.ccm.upgrade.error.environment.notlatest=Invalid state: environment {0} is not upgraded to the latest Cluster Connectivity Manager yet.
@@ -386,8 +387,11 @@ resource.sdx.update_lb_dns.failed=Update of load balancer DNS for datalake faile
 resource.sdx.validation.skipped=Datalake object storage validation skipped. Reason: {0}.
 resource.sdx.change.image.started=Datalake change image flow started.
 resource.sdx.datalake.upgrade.started=Datalake upgrade flow started.
+resource.sdx.datalake.upgrade.preparation.started=Datalake upgrade preparation flow started.
 resource.sdx.datalake.upgrade.finished=Datalake upgrade flow finished.
+resource.sdx.datalake.upgrade.preparation.finished=Datalake upgrade preparation flow finished.
 resource.sdx.datalake.upgrade.failed=Datalake upgrade flow failed.
+resource.sdx.datalake.upgrade.preparation.failed=Datalake upgrade preparation flow failed.
 resource.sdx.sync.failed=Datalake sync failed
 resource.workspace.created=Workspace created. {0}
 resource.workspace.deleted=Workspace deleted. {0}
