--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -552,6 +552,7 @@ datalake.recovery.bringup.failed=Datalake stack recovery failed.
 datalake.recovery.bringup.finished=Datalake stack successfully recovered, creating datalake cluster.
 datalake.recovery.teardown.finished=Datalake stack tear-down for recovery completed successfully.
 datalake.resize.triggered=Datalake resize initiated.
+datalake.resize.complete=Datalake resize complete.
 
 datalake.datahub.refresh.in.progress=Datahub refresh in progress
 datalake.datahub.refresh.failed=Datahub refresh failed. Reason: {0}
