CB-17523 EDH tracking for salt password rotation
Reason field was added to salt password rotation operation to indicate why the operation was started, it will be used only for tracking purposes. To achieve this, new flow context and request params were introduced in both core and freeipa services.
The related operations got their own service, called RotateSaltPasswordService.

--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -558,6 +558,7 @@ datalake.datahub.refresh.failed=Datahub refresh failed. Reason: {0}
 
 datalake.salt.passwordrotation.in.progress=Datalake SaltStack user password rotation in progress
 datalake.salt.passwordrotation.failed=Datalake SaltStack user password rotation failed. Reason: {0}
+datalake.salt.passwordrotation.finished=Datalake SaltStack user password rotation finished
 
 environment.stack.config.updates.started=Environment configuration update of clusters started.
 environment.stack.config.updates.finished=Environment configuration update of clusters finished.
