CB-17232: [pre-check] Implement new data lake API to trigger permission validation backup location.

--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -385,6 +385,7 @@ resource.sdx.detach.deletion.failed=Deletion of detached datalake {0} failed. Pl
 resource.sdx.update_lb_dns.finished=Update of load balancer DNS for datalake finished.
 resource.sdx.update_lb_dns.failed=Update of load balancer DNS for datalake failed. Reason: {0}.
 resource.sdx.validation.skipped=Datalake object storage validation skipped. Reason: {0}.
+resource.sdx.validation.failed=Datalake object storage validation failed. Reason: {0}.
 resource.sdx.change.image.started=Datalake change image flow started.
 resource.sdx.datalake.upgrade.started=Datalake upgrade flow started.
 resource.sdx.datalake.upgrade.preparation.started=Datalake upgrade preparation flow started.
