CB-16954; Add eventLog creation to the recovery process start, and the recovery process finished state

--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -555,6 +555,7 @@ datalake.recovery.failed=Datalake recovery failed.
 datalake.recovery.bringup.failed=Datalake stack recovery failed.
 datalake.recovery.bringup.finished=Datalake stack successfully recovered, creating datalake cluster.
 datalake.recovery.teardown.finished=Datalake stack tear-down for recovery completed successfully.
+datalake.recovery.started=Datalake recovery started.
 datalake.resize.triggered=Datalake resize initiated.
 datalake.resize.complete=Datalake resize complete.
 
