CB-17923 Extend NodeServicesCheckerConclusionStep to check all service statuses
Improve and extract conclusion messages to properties file
Enhance salt checker conclusion step error handling

--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -599,3 +599,25 @@ aws.variant.migration.successful=Successfully migrated the cloud formation templ
 aws.variant.migration.failed=Failed to migrate the cloud formation template
 
 authorization.doc=Please read documentation about user management in official doc: https://docs.cloudera.com/management-console/cloud/user-management/topics/mc-managing-user-access.html. More specifically, you can read about roles here: https://docs.cloudera.com/management-console/cloud/user-management/topics/mc-understanding-roles-resource-roles.html. If you need more detailed information about permissions, you need to check underlying service of user management.
+
+conclusion.node.status.monitor.unreachable=Node status monitor is unreachable. The possible reasons are: the cluster doesn't support the node status monitor service, or the network configuration is not CDP compatible, or some required components are in bad health. Please ssh into the cluster and run cdp doctor.
+conclusion.node.status.monitor.failed=There are unhealthy services on nodes: {0}. Please check the instances on your cloud provider for further details.
+conclusion.node.status.monitor.failed.details=There are unhealthy services on nodes: {0}
+conclusion.salt.collect.unreachable.found=Unreachable nodes: {0}. We detected that cluster members can't communicate with each other. Please validate if all cluster members are available and healthy on your cloud provider.
+conclusion.salt.collect.unreachable.found.details=Unreachable salt minions based on salt ping: {0}
+conclusion.salt.collect.unreachable.failed=Collecting unreachable nodes failed. Please validate if all cluster members are available and healthy on your cloud provider.
+conclusion.salt.collect.unreachable.failed.details=Collecting unreachable nodes failed, reason: {0}
+conclusion.salt.master.services.unhealthy=There are unhealthy services on master node: {0}. Please check the instances on your cloud provider for further details.
+conclusion.salt.master.services.unhealthy.details=Unhealthy services on master: {0}
+conclusion.salt.minions.unreachable=Unreachable nodes: {0}. We detected that cluster members can't communicate with each other. Please validate if all cluster members are available and healthy on your cloud provider.
+conclusion.salt.minions.unreachable.details=Unreachable salt minions based on node status service: {0}
+conclusion.network.ccm.not.accessible=CCM is not accessible from node {0}. Please check network settings.
+conclusion.network.ccm.not.accessible.details=CCM health status is {0} for node {1}
+conclusion.network.cloudera.com.not.accessible=cloudera.com is not accessible from node: {0}. Please check network settings.
+conclusion.network.cloudera.com.not.accessible.details=cloudera.com accessibility status is {0} for node {1}
+conclusion.network.neighbour.not.accessible=Node {0} cannot reach any neighbour nodes. Please check nodes and network settings.
+conclusion.network.neighbour.not.accessible.details=Neighbours accessibility status is {0} for node {1}
+conclusion.cm.unhealthy.vms.found=Unhealthy and/or unknown VMs found based on CM status. Please check the instances on your cloud provider for further details.
+conclusion.cm.unhealthy.vms.found.details=Unhealthy VMs: {0}, unknown VMs: {1}
+conclusion.prodider.not.running.vms.found=Not running VMs found based on provider status. Please check the instances on your cloud provider for further details.
+conclusion.prodider.not.running.vms.found.details=Not running VMs: {0}
