CB-17631 Salt states for Postgres 11 embedded database upgrade
Embedded database upgrade will be executed automatically during OS upgrade if needed.
Os upgrade flow chain will be extended with two new flows:
- Flow for embedded database upgrade preparation:
  - Validate if there is enough space on the attached database volume
  - Copy the original postgresql binaries to the attached database volume. (prepare_embedded.sls)
- Flow for database upgrade. The same flow will be used as for the rds upgrade.
  - in case of embedded database upgrade the backup and restore steps will be skipped
  - the upgrade step contains the following substeps (embedded.sls):
    - Stop postgresql-10 process
    - Init new postgresql db on the attached volume
    - Call pg_upgrade
    - Restore pg_hba.conf in postgres-11 data dir
    - Restore postgresql.conf in postgres-11 data dir
    - move the scripts dir from the original postgres directory to the new one
      this dir containes marker files for the db initialization scripts
    - remove the original postgresql data directory
    - move the new postgresql data directory to be available on the original path
    - change db location in the new postgresql systemctl unit file
    - enable and start the new postgresql service
    - execute the pgsql11.sls salt state which will set the new postgresql as default

The postgresql upgrade will be executed only if the CDP_POSTGRES_UPGRADE_EMBEDDED entitlement is enabled and
postgresql version of the stack is different from the target version and the database is embedded and is on attached volume.

The following scenarios were tested:
  - multiple upgrade / start / stop / repair of the datalake cluster when the entitlement is enabled
  - multiple upgrade / start / stop / repair of the datalake cluster when the entitlement is disabled
  - datalake upgrade when the orignal postgresql version is 11. DB related flows will be skipped
  - upgrade of datahub with replace vms (os upgrade). DB related fl

--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -214,6 +214,10 @@ cluster.externaldatabase.upgrade.failed=Upgrading database server failed.
 cluster.externaldatabase.upgrade.already.upgraded=Upgrading database server is not needed as it is already on the latest version ({0}).
 cluster.externaldatabase.upgrade.not.available=Upgrading database server is not possible as stack is not available.
 
+cluster.prepare.embeddeddatabase.upgrade.inprogress=Preparing embedded database upgrade (space validation on db disk, copying postgres binaries to the db disk).
+cluster.prepare.embeddeddatabase.upgrade.finished=Preparing embedded database upgrade finished.
+cluster.prepare.embeddeddatabase.upgrade.failed=Preparing embedded database upgrade failed.
+
 cluster.ccm.upgrade.tunnel.update=Cluster Connectivity Manager tunnel type update.
 cluster.ccm.upgrade.push.salt.states=Cluster Connectivity Manager upgrade pushing Salt states.
 cluster.ccm.upgrade.reconfigure.nginx=Cluster Connectivity Manager upgrade reconfiguring NGINX.
