CB-17761, CB-18252 - Implement database upgrade by replacing the RDS
This commit introduces the following upgrade logic for Azure:
 - deleting the database
 - deleting any private endpint if exists
 - updating db stack with new version
 - re-deploying the database
 - re-creating private endpoint if needed

The hence created database will be populated by restoring the previously dumped backup
data.

Was tested:
 - with and without Private Endpoints
 - on Data Lake and Data Hub
 - SSL enabled database
 - single RG setup
 - multiple RG setup

--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -213,7 +213,7 @@ cluster.externaldatabase.upgrade.dbserver=Upgrading database server.
 cluster.externaldatabase.upgrade.restore.data=Restoring data from the backup, it might take a while.
 cluster.externaldatabase.upgrade.start.services=Starting back Cloudera Manager and Runtime Services.
 cluster.externaldatabase.upgrade.finished=Upgrading database server finished.
-cluster.externaldatabase.upgrade.failed=Upgrading database server failed.
+cluster.externaldatabase.upgrade.failed=Upgrading database server failed with error: {0}
 cluster.externaldatabase.upgrade.already.upgraded=Upgrading database server is not needed as it is already on the latest version ({0}).
 cluster.externaldatabase.upgrade.not.available=Upgrading database server is not possible as stack is not available.
 
