--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -591,10 +591,13 @@ datalake.database.restore.finished=Datalake database restore is successful.
 datalake.database.restore.failed=Failed to restore database. Reason: {0}.
 datalake.database.restore.could.not.start=Database restore could not be started due to the following reason: {0}
 datalake.backup.in.progress=Datalake backup in progress.
+datalake.backup.validation.in.progress=Datalake backup validation in progress.
 datalake.restore.in.progress=Datalake restore in progress.
 datalake.backup.finished=Datalake backup is complete.
+datalake.backup.validation.finished=Datalake backup validation complete.
 datalake.restore.finished=Datalake restore is complete.
 datalake.backup.failed=Datalake backup failed. Reason: {0}
+datalake.backup.validation.failed=Datalake backup validation failed. Reason: {0}
 datalake.restore.failed=Datalake restore failed. Reason: {0}
 datalake.cert.renewal.started=Datalake certificate renewal started.
 datalake.cert.renewal.failed=Datalake certificate renewal failed. Reason: {0}
