CB-17991 Implement Core API to be able to vertical scale Data Lakes and Data Hubs

--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -153,6 +153,9 @@ cluster.start.requested=Cluster start requested
 cluster.changing.credential=Changing cluster authentication
 cluster.changed.credential=Cluster authentication changed
 cluster.change.credentail.failed=Unable to change cluster manager password.
+cluster.changing.verticalscale=Vertical scaling the cluster
+cluster.changed.verticalscale=Vertical scaled the cluster
+cluster.change.verticalscale.failed=Unable to vertical scale the cluster.
 cluster.start.failed=Cluster could not be started. Reason: {0}
 cluster.stop.failed=Cluster could not be stopped. Reason: {0}
 cluster.create.failed={0}
@@ -543,6 +546,13 @@ environment.upgrade.ccm.rollback=Rolling back CCM upgrade on last failed compone
 environment.upgrade.ccm.finished=Upgrading CCM finished
 environment.upgrade.ccm.failed=Upgrading CCM failed
 
+environment.vertical.scale.validation.started=Validation for Vertical Scaling FreeIPA started
+environment.vertical.scale.validation.failed=Validation for Vertical Scaling FreeIPA failed
+environment.vertical.scale.freeipa.started=Vertical Scaling FreeIPA started
+environment.vertical.scale.freeipa.failed=Vertical Scaling FreeIPA failed
+environment.vertical.scale.finished=Vertical Scaling FreeIPA finished
+environment.vertical.scale.failed=Vertical Scaling FreeIPA was not successful please retry
+
 credential.azure.interactive.created=Azure interactive credential app successfully created
 credential.azure.interactive.failed=Azure interactive credential app creation failed
 credential.azure.interactive.status=Azure interactive credential status
@@ -606,6 +616,12 @@ stack.lb.update.failed=Load balancer creation failed. Reason: {0}
 
 aws.variant.migration.successful=Successfully migrated the cloud formation template. The CF template and autoscaling group were removed
 aws.variant.migration.failed=Failed to migrate the cloud formation template
+
+datalake.verticalscale.validation.in.progress=Validation for vertically scale Data Lake is in progress
+datalake.verticalscale.validation.failed=Validation for vertically scale Data Lake failed {0}
+datalake.verticalscale.datalake.in.progress=Vertically scale Data Lake is in progress
+datalake.verticalscale.datalake.failed=Vertically scale Data Lake failed {0}
+datalake.verticalscale.failed=Vertically scale failed on Data Lake {0}
 
 authorization.doc=Please read documentation about user management in official doc: https://docs.cloudera.com/management-console/cloud/user-management/topics/mc-managing-user-access.html. More specifically, you can read about roles here: https://docs.cloudera.com/management-console/cloud/user-management/topics/mc-understanding-roles-resource-roles.html. If you need more detailed information about permissions, you need to check underlying service of user management.
 
