CB-17890 Salt password rotation for non-available stacks
Only check if the stack is not stopped instead of is it available
Save the starting status and re-aplly it after successful salt password rotation

--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -359,7 +359,7 @@ cluster.pillar.config.update.failed=Failed to update cluster configuration,
 
 cluster.salt.passwordrotate.started=SaltStack user password rotation started
 cluster.salt.passwordrotate.started.fallback=SaltStack user password rotation started with fallback implementation, please upgrade your cluster for a better user experience
-cluster.salt.passwordrotate.finished=SaltStack user password successfully rotated
+cluster.salt.passwordrotate.finished=SaltStack user password successfully rotated, restored previous status
 cluster.salt.passwordrotate.failed=SaltStack user password rotation failed with error: {0}
 
 resource.blueprint.created=Blueprint created.
