CB-17370 CB-17371 Postgres upgrade: SDX endpoint and flow to call postgres upgrade
This commit introduces an endpoint and a flow. The flow calls core's internal postgres upgrade endpoint and waits until it finishes. Finally, it queries redbeams or stack endpoint for the latest DB major version and is persisted in SdxCluster entity.
There are two conditions to be met to launch an upgrade:
1) SDX has to be in a correct state, and
2) the major version of the database version, external or embedded, has to be below the target major version.

SDX State: the flow is only triggered if the SDX is available, or if a postgres upgrade has failed. If the upgrade is in progress, or in any other state the upgrade is not triggered.

Database version: the code tries to read the version from
- SdxCluster entity's databaseEngineVersion field. If it is not filled in, then
- checks if it is an external DB and if yes, queries redbeams for a version
- if it is an embedded DB then gets the stack from core's StackV4Endpoint and checks databaseEngineVersion there.
- if none of them is filled in, then the service supposes an upgrade is needed and it is left to core service to decide if an upgrade is needed

--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -324,6 +324,9 @@ datalake.ccm.upgrade.not.upgradeable=Data Lake is not upgradeable.
 datalake.ccm.upgrade.not.available=Data Lake is not in Available state for upgrade.
 datalake.ccm.upgrade.failed=Data Lake upgrade to the latest Cluster Connectivity Manager version failed.
 datalake.ccm.upgrade.inprogress=Data Lake upgrade to the latest Cluster Connectivity Manager is in progress.
+datalake.database.server.upgrade.requested=Data Lake database server upgrade was requested.
+datalake.database.server.upgrade.failed=Data Lake database server upgrade failed.
+datalake.database.server.upgrade.inprogress=Data Lake database server upgrade is in progress.
 
 datahub.ccm.upgrade.error.environment.notlatest=Invalid state: environment {0} is not upgraded to the latest Cluster Connectivity Manager yet.
 datahub.ccm.upgrade.not.available=Data Hub is not in Available state for upgrade.
